--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -1,16 +1,59 @@
-name: VALIDANDO DOCKER
+name: CI
 
 on:
   push:
     branches:
       - main
-
+  pull_request:
+    branches:
+    - main
+  
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
-    steps:
-    - name: Baixar imagem Docker
-      run: docker pull guscarpim/docker-fiap:v1
 
-    - name: Rodando o container
-      run: docker run -d -p 3000:3000 guscarpim/docker-fiap:v1
+  steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Node.js
+      uses: actions/checkout@v4
+      width:
+        node-version: '18'
+
+    - name: Install dependencies
+      run: yarn install
+
+    - name: Run Tests
+      run: yarn test
+
+  build-and-push:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Log in to Docker Hub
+      uses: actions/checkout@v2
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/node-app:v1
+
+deploy:
+  runs-on: ubuntu-latest
+  nedds: build-and-push
+
+  steps:
+    - name: Deploy to Render
+      run: curl -X POST "$RENDER_DEPLOY_HOOK"
+      env:
+        RENDER_DEPLOY_HOOK: ${{ secrets.RENDER_DEPLOY_HOOK }}
+
+
